# tce_ged_lib

./: .gitignore  CMakeLists.txt  README.md
ged/: CMakeLists.txt
ged/src/cpp/: GedApp.cpp  GedWindow.cpp  ged.cpp
ged/src/include/: GedApp.hpp  GedWindow.hpp  ged.hpp
ged/test/: ged_tests.cpp
tcelib/: CMakeLists.txt
tcelib/src/cpp/: App.cpp  EventHandler.cpp  Exception.cpp  Image.cpp  StackTrace.cpp  Window.cpp  main.cpp
tcelib/src/cpp/SDL2/: SdlWin.cpp
tcelib/src/cpp/windows/: WinApp.cpp  WinMain.cpp
tcelib/src/include/tcelib/: App.hpp  Color.hpp  EventHandler.hpp  Exception.hpp  Image.hpp  StackTrace.hpp  String.hpp  Window.hpp  unused_macros.hpp
tcelib/src/include/tcelib/SDL2/: SdlWin.hpp
tcelib/src/include/tcelib/windows/: WinApp.hpp
tcelib/test/: tcelib_tests.cpp
